--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://containers-us-west-163.railway.app:6208/railway
-spring.datasource.username:root
-spring.datasource.password:xObXGnAek1Vye5unnawR
+spring.datasource.url=jdbc:mysql://localhost:3003/${DB_LAVANDERIA}
+spring.datasource.username:${DB_HOST}
+spring.datasource.password:${DB_PASS}
 
 spring.jpa.hibernate.ddl-auto=update
